03_network-private/public.tf
resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.test.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "Public"
  }
}
